deployment.yaml
# Uploader Service Deployment 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: uploader
  template:
    metadata:
      labels:
        app: uploader
    spec:
      containers:
      - name: uploader-container
        image: klutzyfella/image-uploader:latest
        ports:
        - containerPort: 8080
---
# Uploader Service Network
apiVersion: v1
kind: Service
metadata:
  name: uploader-service
spec:
  selector:
    app: uploader 
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
# Worker Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker-container
        image: klutzyfella/image-processor:latest
        ports:
        - containerPort: 8081

---
# Worker Service Network
apiVersion: v1
kind: Service
metadata:
  name: worker-service
spec:
  selector:
    app: worker
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
