ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nimbus-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /upload
        pathType: Prefix
        backend:
          service:
            name: uploader-service
            port:
              number: 8080
